@@ -5,10 +5,10 @@ EAPI=5
 HOMEPAGE=http://www.gnu.org/software/grub/
 IUSE=debug device-mapper doc efiemu mount +multislot nls static sdl test truetype libzfs grub_platforms_emu grub_platforms_qemu-mips grub_platforms_yeeloong grub_platforms_ieee1275 grub_platforms_coreboot grub_platforms_multiboot grub_platforms_efi-32 grub_platforms_pc grub_platforms_qemu grub_platforms_xen grub_platforms_efi-64
 LICENSE=GPL-3 truetype? ( BitstreamVera GPL-2-with-font-exception )
-RDEPEND=app-arch/xz-utils >=sys-libs/ncurses-5.2-r5 debug? ( sdl? ( media-libs/libsdl ) ) device-mapper? ( >=sys-fs/lvm2-2.02.45 ) libzfs? ( sys-fs/zfs ) mount? ( sys-fs/fuse ) truetype? ( media-libs/freetype ) ppc? ( sys-apps/ibm-powerpc-utils sys-apps/powerpc-utils ) ppc64? ( sys-apps/ibm-powerpc-utils sys-apps/powerpc-utils ) kernel_linux? ( grub_platforms_efi-32? ( sys-boot/efibootmgr ) grub_platforms_efi-64? ( sys-boot/efibootmgr ) ) !multislot? ( !sys-boot/grub:0 )
+RDEPEND=app-arch/xz-utils >=sys-libs/ncurses-5.2-r5 debug? ( sdl? ( media-libs/libsdl ) ) device-mapper? ( >=sys-fs/lvm2-2.02.45 ) libzfs? ( sys-fs/zfs ) mount? ( sys-fs/fuse ) truetype? ( media-libs/freetype ) ppc? ( sys-apps/ibm-powerpc-utils sys-apps/powerpc-utils ) ppc64? ( sys-apps/ibm-powerpc-utils sys-apps/powerpc-utils ) kernel_linux? ( grub_platforms_efi-32? ( sys-boot/efibootmgr ) grub_platforms_efi-64? ( sys-boot/efibootmgr ) ) !multislot? ( !sys-boot/grub:0 ) nls? ( sys-devel/gettext )
 REQUIRED_USE=grub_platforms_qemu? ( truetype ) grub_platforms_yeeloong? ( truetype )
 RESTRICT=test
 SLOT=2
 SRC_URI=truetype? ( mirror://sourceforge/dejavu/dejavu-sans-ttf-2.34.zip http://unifoundry.com/pub/unifont-6.3.20131217/unifont-6.3.20131217.pcf.gz )
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	autotools-utils	fb74970befc9b65ceec689d2ccff3022	bash-completion-r1	db412e427e3317ffd3e15f17df269c5e	eutils	af81d52c25ec93fbdff71e0efb0de7b7	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	git-r3	9fcd81e4cb49fd37511fce461544153f	libtool	b9b3340e3a19510f0d9f05cfccbf209f	mount-boot	02dd3bb4c5f025fef0fc3ade0f27c217	multibuild	56d4120419072116417e8de1bd1040ff	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	pax-utils	2424f959506320f5196de8f79fa05297	python-any-r1	08d3455b23110d650f173ab0a090818b	python-utils-r1	18d8279a3382bf4453e7ff35208ce907	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=918b0ef4efa3aaaef630226dbc647787
+_md5_=79fe8ad22bdd55dcccebe833dfa07ed0
