@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/grub-2.00_p5107-r2.ebuild,v 1.7 2014/03/09 07:12:47 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/grub-2.00_p5107-r2.ebuild,v 1.8 2014/03/15 03:31:16 floppym Exp $
 
 EAPI=5
 
@@ -107,6 +107,7 @@ RDEPEND+="
 		grub_platforms_efi-64? ( sys-boot/efibootmgr )
 	)
 	!multislot? ( !sys-boot/grub:0 )
+	nls? ( sys-devel/gettext )
 "
 
 if [[ -n ${GRUB_AUTOGEN} ]]; then
