@@ -1,6 +1,10 @@
 # ChangeLog for sys-boot/grub
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.308 2014/03/09 07:12:47 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.309 2014/03/15 03:31:16 floppym Exp $
+
+  15 Mar 2014; Mike Gilbert <floppym@gentoo.org> grub-2.00_p5107-r2.ebuild,
+  grub-2.02_beta2.ebuild, grub-9999-r1.ebuild:
+  Add runtime dep on gettext, bug 503858 by Nikoli.
 
   09 Mar 2014; Mike Frysinger <vapier@gentoo.org> grub-2.00_p5107-r2.ebuild,
   grub-2.02_beta2.ebuild, grub-9999-r1.ebuild:
